--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,17 +17,20 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.62.11",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.2",
+    "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.62.9",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "autoprefixer": "^10.4.20",
