--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^6.4.8",
     "@mui/styled-engine-sc": "^6.4.6",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -26,16 +27,20 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.66.3",
     "@tanstack/react-table": "^8.21.2",
+    "@types/js-cookie": "^3.0.6",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.9.4",
     "next": "^15.1.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -47,6 +52,7 @@
     "styled-components": "^6.1.16",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
